# starsync

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  compose.yaml
.github/workflows/: auto-release.yml  ci.yml  release.yml
deploy/helm/starsync/: Chart.yaml  values.yaml
deploy/helm/starsync/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: README.md  configmap.yaml  cronjob-sync.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
deploy/systemd/: starsync.service
docs/architecture/: cloud-mode.md
docs/deployment/: kubernetes.md
docs/superpowers/specs/: 2026-07-03-starsync-sync-and-lists-design.md
scripts/: bump-version.sh  generate-homebrew-formula.sh  package-vendored-source.sh
src/: api.rs  cache.rs  cli.rs  config.rs  events.rs  github.rs  lib.rs  main.rs  markdown.rs  mcp.rs  models.rs  openapi.rs  search.rs  service.rs  sqlite_index.rs  storage.rs  tantivy_index.rs  ui.rs
